--- a/app/src/main/res/layout/fragment_overlay_permission.xml
+++ b/app/src/main/res/layout/fragment_overlay_permission.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0000ff"
-    tools:context=".fragments.BlueFragment">
+    android:background="#BDB76B">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -17,23 +15,9 @@
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Blue fragment"
+            android:text="Permission Request Fragment"
             android:textColor="#ffffff"
             android:textSize="30sp" />
-
-        <Button
-            android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:text="NEXT"
-            android:textColor="@android:color/holo_blue_dark" />
-
-        <Button
-            android:id="@+id/previous"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:text="PREV"
-            android:textColor="@android:color/holo_blue_dark" />
 
     </LinearLayout>
 
