--- a/app/src/main/res/layout/fragment_request_permission.xml
+++ b/app/src/main/res/layout/fragment_request_permission.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF0000">
+    android:background="#BDB76B">
 
     <TextView
         android:id="@+id/text"
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="Overlay Permission Denied"
+        android:text="Requesting Permission"
         android:textColor="#ffffff"
         android:textSize="30sp" />
 
