--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#006400"
+    android:background="#ff6400"
     tools:context=".fragments.FirstLaunchFragment">
 
     <TextView
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="First Launch"
+        android:text="Login"
         android:textColor="#ffffff"
         android:textSize="30sp" />
 
@@ -21,7 +21,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Commencer"
+        android:text="Login"
         android:textColor="@android:color/holo_blue_dark" />
 
 </RelativeLayout>
