--- a/app/src/main/res/layout/fragment_overlay_permission.xml
+++ b/app/src/main/res/layout/fragment_overlay_permission.xml
@@ -4,21 +4,14 @@
     android:layout_height="match_parent"
     android:background="#BDB76B">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Permission Request Fragment"
-            android:textColor="#ffffff"
-            android:textSize="30sp" />
-
-    </LinearLayout>
+        android:text="Overlay Permission Request"
+        android:textColor="#ffffff"
+        android:textSize="30sp" />
 
 </RelativeLayout>
