--- a/app/src/main/res/layout/fragment_read_phone_permission_denied.xml
+++ b/app/src/main/res/layout/fragment_read_phone_permission_denied.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="Location Permission Denied"
+        android:text="Read Phone Permission Denied"
         android:textColor="#ffffff"
         android:textSize="30sp" />
 
